cmake_minimum_required(VERSION 3.0)
project(banyan)

#---------------------------------------------------------------------------------------------------
# Enable Rust via CMake
#---------------------------------------------------------------------------------------------------
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeRust/cmake")
enable_language(Rust)
include(CMakeCargo)

#---------------------------------------------------------------------------------------------------
# Other Configuration
#---------------------------------------------------------------------------------------------------
include(GNUInstallDirs)

#---------------------------------------------------------------------------------------------------
# Banyan C-FFI Crate
#---------------------------------------------------------------------------------------------------
add_subdirectory(ffi)

#---------------------------------------------------------------------------------------------------
# Installation
#---------------------------------------------------------------------------------------------------
install(EXPORT banyan-targets
	FILE banyanConfig.cmake
	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/banyan
)
