[package]
name = "banyan"
version = "0.1.0"
authors = ["Nathan Kent <nate@nkent.net>"]

edition = "2018"

[dependencies]
crossbeam-channel = "0.3.8"
parking_lot = "0.8.0"
nng = "0.5.0-rc.3"
log = "0.4"
futures = "0.1.25"

[dev-dependencies]
env_logger = "0.5"

[patch.crates-io]
"nng-sys" = { git = "https://github.com/jeikabu/nng-rust.git", branch = "tracking" }
