[package]
name = "banyan"
version = "0.2.0"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "A task distribution library utilizing NNG"
repository = "https://gitlab.com/neachdainn/banyan"
readme = "README.md"

keywords = ["nng", "nanomsg", "distribution"]
categories = ["asynchronous", "concurrency"]
license = "MIT"

edition = "2018"

publish = false

[badges]
gitlab = { repository = "neachdainn/banyan", branch = "master" }

[dependencies]
crossbeam-channel = "0.3.8"
parking_lot = "0.8.0"
nng = "0.5.0"
log = "0.4"
futures = "0.1.25"

[dev-dependencies]
env_logger = "0.5"

[patch.crates-io]
"nng-sys" = { git = "https://github.com/jeikabu/nng-rust.git", branch = "tracking" }
