[package]
name = "banyan"
version = "0.2.1"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "A task distribution library utilizing NNG"
repository = "https://gitlab.com/neachdainn/banyan"
readme = "README.md"

keywords = ["nng", "nanomsg", "distribution"]
categories = ["asynchronous", "concurrency"]
license = "MIT"

edition = "2018"

publish = false

[badges]
gitlab = { repository = "neachdainn/banyan", branch = "master" }

[dependencies]
crossbeam-channel = "0.4.0"
parking_lot = "0.10.0"
nng = "1.0.0-rc.2"
log = "0.4.8"
futures = "0.3.4"

[dev-dependencies]
env_logger = "0.7.1"
